--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <body>
 <h1>About me</h1>
 <div>
-<h2>Hello, my name is Elson. I'm 14 and i go to George Washington. I like to watch movies. I especially like Creed. Heres a trailer. </h2>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/Uv554B7YHk4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h2>Hello, my name is Elson. I'm 14 and i go to George Washington. I like to look at funny images.  </h2>
+<img> src= "https://i.chzbgr.com/full/9097238528/h53420778/" </img>
 </body>
 </head>
 </html>
