--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h1>About me</h1>
 <div>
 <h2>Hello, my name is Elson. I'm 14 and i go to George Washington. I like to look at funny images.  </h2>
-<img> src= "https://i.chzbgr.com/full/9097238528/h53420778/" </img>
+<img src= "https://i.chzbgr.com/full/9097238528/h53420778/" />
 </body>
 </head>
 </html>
