--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 <body>
     <h1>About me</h1>
     <link rel="stylesheet" type=text/css href="main.css">
-    <h2>Hello, my name is Elson. I'm 14 and i go to George Washington. I like to look at funny images.</h2>
+    <h2>Hello, my name is Elson. I'm 14 and i go to George Washington.</h2>
+
+<div class="full-grid">
+<div class="square-1"></div>
+<div class="square-2"></div>
+<div class="square-3"></div>
+<div class="square-4"></div>
+<div class="square-5"></div>
+<div class="square-6"></div>
+<div class="square-7"></div>
+<div class="square-8"></div>
+<div class="square-9"></div>
+</div>
 </body>
 </html>
