--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" type=text/css href="main.css">
     <h2>Hello, my name is Elson. I'm 14 and i go to George Washington.</h2>
 
+    
 <div class="full-grid">
+    <h2>Nine Square Challenge</h2>
 <div class="square-1"></div>
 <div class="square-2"></div>
 <div class="square-3"></div>
@@ -18,6 +20,7 @@
 <div class="square-7"></div>
 <div class="square-8"></div>
 <div class="square-9"></div>
+
 </div>
 </body>
 </html>
