--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <link rel="stylesheet" type=text/css href="main.css">
     <h2>Hello, my name is Elson. I'm 14 and i go to George Washington.</h2>
 
-    
 <div class="full-grid">
-    <h2>Nine Square Challenge</h2>
-<div class="square-1"></div>
-<div class="square-2"></div>
-<div class="square-3"></div>
-<div class="square-4"></div>
-<div class="square-5"></div>
-<div class="square-6"></div>
-<div class="square-7"></div>
-<div class="square-8"></div>
-<div class="square-9"></div>
+    <h3>Nine Square Challenge</h3>
+<div class="cube square-1"></div>
+<div class="cube square-2"></div>
+<div class="cube square-3"></div>
+<div class="cube square-4"></div>
+<div class="cube square-5"></div>
+<div class="cube square-6"></div>
+<div class="cube square-7"></div>
+<div class="cube square-8"></div>
+<div class="cube square-9"></div>
 
 </div>
 </body>
