--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="cube square-7"></div>
 <div class="cube square-8"></div>
 <div class="cube square-9"></div>
-
+<div class="cube square-10"></div>
 </div>
 </body>
 </html>
