--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 <div class="full-grid">
     <h3>Nine Square Challenge</h3>
-<div class="cube square-1"></div>
-<div class="cube square-2"></div>
-<div class="cube square-3"></div>
-<div class="cube square-4"></div>
-<div class="cube square-5"></div>
-<div class="cube square-6"></div>
-<div class="cube square-7"></div>
-<div class="cube square-8"></div>
-<div class="cube square-9"></div>
-<div class="cube square-10"></div>
+<div class="cube square-1">1</div>
+<div class="cube square-2">2</div>
+<div class="cube square-3">3</div>
+<div class="cube square-4">4</div>
+<div class="cube square-5">5</div>
+<div class="cube square-6">6</div>
+<div class="cube square-7">7</div>
+<div class="cube square-8">8</div>
+<div class="cube square-9">9</div>
+
 </div>
 </body>
 </html>
