--- a/MadLibs.html
+++ b/MadLibs.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <p>I like to eat <span id='food'></span>. I hate <span id='enemy'>Enemy</span>. My best friend <span id='friend'></span>. I like <span id='verb'></span>.</p>
-    
+    <h2>I like to eat <span id='food'>strawberries</span>. I hate <span id='enemy'>Bob</span>. My best friend is <span id='friend'>Joe</span>. I like <span id='verb'>coding</span>.</h2>
+
+<button id="ChangeFood">Change Food</button>
+<button id="ChangeEnemy">Change Enemy</button>
+<button id="ChangeFriend">Change Friend</button>
+<button id="ChangeVerb">Change Verb</button>
     <script src="main.js"></script>
 </body>
 </html>
