--- a/MadLibs.html
+++ b/MadLibs.html
@@ -14,6 +14,15 @@
 <button id="ChangeEnemy">Change Enemy</button>
 <button id="ChangeFriend">Change Friend</button>
 <button id="ChangeVerb">Change Verb</button>
-    <script src="main.js"></script>
+
+
+
+<div>
+<h1 id="value">0</h1>
+<button id="subtract">-1</button>
+<button id="add">+1</button>
+</div>
+<script src="main.js"></script>
+
 </body>
 </html>
