made the button work and added css

--- a/MadLibs.html
+++ b/MadLibs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <h2>I like to eat <span id='food'>strawberries</span>. I hate <span id='enemy'>Bob</span>. My best friend is <span id='friend'>Joe</span>. I like <span id='verb'>coding</span>.</h2>
+    <h2>I like to eat <span id='food'>_____</span>. I hate <span id='enemy'>_____</span>. My best friend is <span id='friend'>_____</span>. I like <span id='verb'>_____</span>.</h2>
 
 <button id="ChangeFood">Change Food</button>
 <button id="ChangeEnemy">Change Enemy</button>
@@ -17,10 +17,11 @@
 
 
 
-<div>
-<h1 id="value">0</h1>
+<div class=Counter>
+    <h3>Counter</h3>
+<div class=set value><span id='value'>0</span></div>
 <button id="subtract">-1</button>
-<button id="add">+1</button>
+<button id="add" >+1</button>
 </div>
 <script src="main.js"></script>
 
