--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>About me</h1>
     <link rel="stylesheet" type=text/css href="main.css">
     <h2>Hello, my name is Elson. I'm 14 and i go to George Washington.</h2>
+   <a href="MadLibs.html">My Buttons Page</a>
 
 <div class="full-grid">
     <h3>Nine Square Challenge</h3>
