added a game link

--- a/MadLibs.html
+++ b/MadLibs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <h2>I like to eat <span id='food'>_____</span>. I hate <span id='enemy'>_____</span>. My best friend is <span id='friend'>_____</span>. I like <span id='verb'>_____</span>.</h2>
+    <h2> I like to eat <span id='food'>_____</span>. I hate <span id='enemy'>_____</span>. My best friend is <span id='friend'>_____</span>. I like <span id='verb'>_____</span>.</h2>
 
 <button id="ChangeFood">Change Food</button>
 <button id="ChangeEnemy">Change Enemy</button>
@@ -23,6 +23,7 @@
 <button id="subtract">-1</button>
 <button id="add" >+1</button>
 </div>
+<a href="index.html">Back</a>
 <script src="main.js"></script>
 
 </body>
