--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Elson Liang</title>
 </head>
 <body>
-    <h1>About me</h1>
+    <h1><b>About Me</b></h1>
     <link rel="stylesheet" type=text/css href="main.css">
-    <h2>Hello, my name is Elson. I'm 14 and i go to George Washington.</h2>
+    <h2>Hello, my name is Elson. I'm 14 and I go to George Washington.
+         I currently learn my coding at Mission Bit's Lincoln High school site.</h2>
    <div class="row"><a href="MadLibs.html">My Buttons Page</a></div>
    <a href="https://jaydewong.github.io/Jellyfish/GameStart.html">Visit a game I made part of!</a>
 
